<resources>
    <string name="app_name">Alerte température</string>
    <string name="title_activity_reglages_activitity">ReglagesActivitity</string>
    <string name="action_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Paramettres</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="seuilMax">Seuil max</string>
    <string name="seuilMin">Seuil min</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="seuilMaximal">Seuil maximal</string>
    <string name="seuilMinimal">Seuil minimal</string>
    <string name="modifier">Modifier</string>
    <string name="langue">Langue</string>
    <string name="francais">Français</string>
    <string name="anglais">Anglais</string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="reglages">Reglages</string>
    <string name="historique">Historique</string>
    <string name="changerLangue">Changer de langue</string>
    <string name="temperature">Température</string>
    <string name="etat_de_la_temp_rature">État de la température</string>
</resources>
